Adding a Sticky Footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<div id = "wrap">
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -18,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a class="navbar-brand" href="#">Flixter</a>
+        <%= link_to 'Flixter', root_path, class: 'navbar-brand' %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,13 +28,38 @@
         <li><a href="#">Link</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+      	<% if user_signed_in? %>
+      		<li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+  		<% else %>
+	  		<li><%= link_to 'Sign up', new_user_registration_path %></li>
+			<li><%= link_to 'Sign in', new_user_session_path %></li>
+		<% end %>
         <li><a href="#">Link</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
+<% if notice.present? %>
+	<p class="alert alert-info"><%= notice %></p>
+<% end %>
+<% if alert.present? %>
+	<p class="alert alert-danger"><%= alert %></p>
+<% end %>
+
 <%= yield %>
+
+</div>
+
+<br class = "clr" />
+
+<div id="footer">
+	<div class="container">
+	  <b>Footer Here</b>
+	  <br />
+	  <%= link_to 'Link', '#' %>
+	</div>
+</div>
 
 </body>
 </html>
