--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,25 +1,26 @@
 <br />
 
-<div class = "booyah-box col-xs-10 col-xs-offset-1">
-	<h1><%= @course.title %></h1>
-	<br />
-	<div class = "col-sm-4 col-xs-12 text-center">
-		<span class = "label label-default">
-			<%= number_to_currency @course.cost %>
-		</span>
-	
-	<% if current_user && current_user == @course.user %>
-	<br />
-	<br />
-		<%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
-	<% end %>
-	</div>
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1><%= @course.title %></h1>
+  <%= image_tag @course.image, class: 'img-responsive' %>
+  <br />
+  <div class="col-sm-4 col-xs-12">
+    <span class="label label-default">
+      <%= number_to_currency @course.cost %>
+    </span>
 
-	<div class = "col-sm-8 col-xs-12">
-		<%= @course.description %>
-	</div>
+    <% if current_user && current_user == @course.user %>
+      <br /
+>      <br />
+      <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+    <% end %>
+  </div>
 
-  	<div class="col-xs-12">
+  <div class="col-sm-8 col-xs-12">
+    <%= @course.description %>
+  </div>
+
+  <div class="col-xs-12">
     <% @course.sections.each do |section| %>
       <div class="section">
         <%= section.title %>
@@ -30,7 +31,9 @@
               -
               <%= lesson.subtitle %>
             <% end %>
+          </div>
+        <% end %>
       </div>
     <% end %>
-	</div>
+  </div>
 </div>
