--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,13 +1,14 @@
 <br />
-<div class = "booyah-box col-xs-10 col-xs-offset-1">
-	<h1 class="text-center"><%= current_course.title %></h1>
-	<br />
-	<%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning pull-right' %>
-	<br class = "clr">
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1 class="text-center"><%= current_course.title %></h1>
+  <%= image_tag @course.image, class: 'img-responsive' %>
+  <br />
+  <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning pull-right' %>
+  <br class="clr" />
 
-	<div class = "text-center">
-		<%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
-	</div>
+  <div class="text-center">
+    <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
+  </div>
 
   <ul>
     <% current_course.sections.each do |section| %>
