--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
 		<h2 class = "text-center"><%= link_to course.title, course_path(course) %></h2>
 		<br />
 		<div class = "col-sm-8 col-xs-12">
-			<%= image_tag @course.image, class: 'img-responsive' %>
+			<%= image_tag course.image, class: 'img-responsive' %>
 			<%= course.description %>
 		</div>
 		<div class = "col-sm-4 col-xs-12 text-center">
