--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,9 @@
 <script>
   $(function() {
+    $('.new-lesson-button').click(function() {
+      var lessonUrl = $( event.target).data('lesson-url');
+      alert('#newLessonForm').attr('action', lessonUrl);
+    });
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -12,6 +16,20 @@
     });
    });
 </script>
+<script>
+  $(function() {
+    $('.sections').sortable({
+      update: function( event, ui ) {
+        $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { section: { row_order_position: ui.item.index() } }
+        });
+      }
+    });
+   });
+  </script>
 
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
@@ -25,17 +43,35 @@
     <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
   </div>
 
-  <ul>
-    <% current_course.sections.each do |section| %>
-      <li>
-        <%= section.title %>
-        <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-primary btn-xs' %>
+<br />
+  <ul class = "sections">
+    <% current_course.sections.rank(:row_order).each do |section| %>
+      <li data-update-url="<%= instructor_section_path(section) %>" class="section-li">
+        <div class="header">
+          <span class="glyphicon glyphicon-list"></span>
+            <%= section.title %>
+        </div>
+        <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
+          New Lesson...
+        </button>
+        <br class = "clr" />
+        <br class= "clr" />
         <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
             <li data-update-url="<%= instructor_lesson_path(lesson) %>">
-              <b><%= lesson.title %></b>
-              -
-              <%= lesson.subtitle %>
+              <div class="col-xs-1 text-center">
+                <br />
+                <span class="glyphicon glyphicon-list"></span>
+              </div>
+              <div class="col-xs-11">
+                <p>
+                  <b><%= lesson.title %></b>
+                </p>
+                <p>
+                  <%= lesson.subtitle %>
+                </p>
+              </div>
+              <br class = "clr" />
             </li>
           <% end %>
         </ul>
@@ -43,5 +79,4 @@
       </li>
     <% end %>
   </ul>
-
 </div>
