--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -59,11 +59,11 @@
         <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
             <li data-update-url="<%= instructor_lesson_path(lesson) %>">
-              <div class="col-xs-1 text-center">
+              <div class="col-xs-1">
                 <br />
                 <span class="glyphicon glyphicon-list"></span>
               </div>
-              <div class="col-xs-11">
+              <div class="col-xs-11 text center">
                 <p>
                   <b><%= lesson.title %></b>
                 </p>
