Finishing the Footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,13 +56,45 @@
 
 <br class = "clr" />
 
-<div id="footer">
-	<div class="container">
-	  <b>Teachers</b>
-	  <br />
-	  <%= link_to 'Teach a Course', new_instructor_course_path %>
-	</div>
-</div>
+  <div id="footer">
+    <div class="container">
+      <div class="col-xs-12 col-sm-3">
+        <b>Teachers</b>
+        <br />
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+        lee.charliek@gmail.com
+        <br />
+        Address Goes
+        <br />
+        Here
+      </div>
+      <div class="col-xs-12 col-sm-3 social">
+        <b>Social</b>
+        <br />
+        <br />
+        <%= link_to 'http://github.com/sgvvannabe' do %>
+          <%= image_tag 'github.png', class: 'social-button' %>
+        <% end %>
+        <%= image_tag 'facebook.png', class: 'social-button' %>
+        <%= image_tag 'twitter.png', class: 'social-button' %>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
